unpackaged/main/default/objects/Site_Access__c/Site_Access__c.object-meta.xml
<CustomObject>
    <label>Site Access</label>
    <nameField>
        <displayFormat>SAR-{0000000000}</displayFormat>
        <label>Site Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>