unpackaged/main/default/objects/Site_Access__c/fields/Access_Notes__c.field-meta.xml
<CustomField>
    <fullName>Access_Notes__c</fullName>
    <label>Access Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>