unpackaged/main/default/objects/Site_Access__c/fields/Customer_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ticket_Number__c</fullName>
    <label>Customer Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>