unpackaged/main/default/objects/Site_Access__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Site Access</relationshipLabel>
    <relationshipName>Site_Access</relationshipName>
    <type>Lookup</type>
</CustomField>