unpackaged/main/default/objects/Site_Access__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Access_Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Ticket_Number__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>Technician__c</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>